--- a/4/index.html
+++ b/4/index.html
@@ -32,6 +32,11 @@
    secBtn.innerHTML = "Mark as Done!"
    secBtn.addEventListener('click', () => {secBtn.innerHTML = 'Done.'})
    para.appendChild(secBtn);
+//   let delBtn =  document.createElement('button').appendChild(delBtn)
+//   delBtn.innerHTML = "Delete the Task!"
+//   delBtn.addEventListener('click', ()=> {
+//     para.removeChild(delBtn)
+//   })
       }
 
 
